--- a/scrapers/web/package.json
+++ b/scrapers/web/package.json
@@ -29,6 +29,8 @@
     "rxjs": "^6.5.5",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "uuid": "^8.3.0",
+    "@types/uuid": "^8.3.0"
   }
 }
